tweaking css for the inline entry form

--- a/core/templates/expenses/list.html
+++ b/core/templates/expenses/list.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="span9">
-            <div class="entry-form-container">
+            <div class="entry-form-container-inline">
                 {% include "expenses/forms/entry.html" %}
             </div>
 
