--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -8545,7 +8545,7 @@ body {
   font-size: 15px;
   font-weight: normal;
 }
-.entry-form-container {
+.entry-form-container-inline {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
@@ -8561,9 +8561,49 @@ body {
   -moz-border-radius: 0;
   border-radius: 0;
 }
-.entry-form-container blockquote {
+.entry-form-container-inline blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
+}
+.entry-form-container-inline form[name="entry-form"] {
+  margin-bottom: 0px;
+  width: 100%;
+}
+.entry-form-container-inline form[name="entry-form"] input[type="text"] {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  border-left: 0;
+  border-right: 0;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
+}
+.entry-form-container-inline form[name="entry-form"] input[type="submit"] {
+  -webkit-border-radius: 0 14px 14px 0;
+  -moz-border-radius: 0 14px 14px 0;
+  border-radius: 0 14px 14px 0;
+  border-left: 0;
+}
+.entry-form-container-inline form[name="entry-form"] input:focus {
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+.entry-form-container-inline form[name="entry-form"] .input-prepend .add-on {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  background-color: #fff;
+  border-right: 0;
+}
+.entry-form-container-inline form[name="entry-form"] .input-prepend .add-on.add-on-round {
+  -webkit-border-radius: 14px 0 0 14px;
+  -moz-border-radius: 14px 0 0 14px;
+  border-radius: 14px 0 0 14px;
 }
 .side-panel {
   min-height: 20px;
