--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -57,12 +57,48 @@ body {
     }
 }
 
-.entry-form-container {
+.entry-form-container-inline {
     .squared-well();
+
+    form[name="entry-form"] {
+        margin-bottom: 0px;
+        width: 100%;
+
+        input {
+            &[type="text"] {
+                .border-radius(0);
+
+                border-left: 0;
+                border-right: 0;
+               .box-shadow(inset 0 1px 0 rgba(0,0,0,.075));
+            }
+
+            &[type="submit"] {
+                .border-radius(0 14px 14px 0);
+                border-left: 0;
+            }
+
+            &:focus {
+                .box-shadow(~"inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
+            }
+        }
+
+        .input-prepend {
+            .add-on {
+                .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+                .border-radius(0);
+                background-color: #fff;
+                border-right: 0;
+
+                &.add-on-round {
+                    .border-radius(14px 0 0 14px);
+                }
+            }
+        }
+    }
 }
 
 .side-panel {
     .squared-well();
 }
-
 
