--- a/core/templates/expenses/forms/entry.html
+++ b/core/templates/expenses/forms/entry.html
@@ -4,7 +4,7 @@
     <input id="id_id" name="id" type="hidden" />
 
     <div class="input-prepend">
-        <span class="add-on"><i class="icon-tag"></i></span>
+        <span class="add-on add-on-round"><i class="icon-tag"></i></span>
         <input
             id="id_category"
             maxlength="200"
@@ -27,10 +27,7 @@
             placeholder="Value"
             autocomplete="off"
             value="{{ entry_form.value.value|default_if_none:"" }}"
-
-            data-title="For incoming, use a + before the value."
-            data-placement="bottom"
-            data-trigger='focus'/>
+            />
     </div>
 
     <div class="input-prepend">
@@ -62,5 +59,5 @@
             value="{{ entry_form.description.value|default_if_none:"" }}"/>
     </div>
 
-    <input type="submit" value="Submit" class="btn btn-primary"/>
+    <input type="submit" value="Submit" class="btn" />
 </form>
