--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -8473,9 +8473,24 @@ a.badge:focus {
     overflow: visible !important;
   }
 }
+/*
+ * OVERRIDES
+ */
 body {
   padding-top: 60px;
 }
+.hero-unit {
+  border: 1px solid #ededed;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+/*
+ * /OVERRIDES
+ */
+/*
+ * GLOBAL STYLES
+ */
 .squared-well {
   min-height: 20px;
   padding: 19px;
@@ -8496,42 +8511,181 @@ body {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
 }
-.hero-unit {
-  border: 1px solid #ededed;
+input[type="text"],
+input[type="password"] {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
 }
-[class^="form-sign"] {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #ffffff;
-  border: 1px solid #ededed;
+input[type="submit"] {
+  display: inline-block;
+  *display: inline;
+  /* IE7 inline-block hack */
+
+  *zoom: 1;
+  padding: 4px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  color: #333333;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  background-color: #f5f5f5;
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #e6e6e6;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  border: 1px solid #cccccc;
+  *border: 0;
+  border-bottom-color: #b3b3b3;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  *margin-left: .3em;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  -webkit-box-shadow: 5px;
-  -moz-box-shadow: 5px;
-  box-shadow: 5px;
 }
-[class^="form-sign"] blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
+input[type="submit"] [class^="icon-"],
+input[type="submit"] [class*=" icon-"] {
+  display: inline;
+  /* keeps button heights with and without icons the same */
+
 }
-[class^="form-sign"] input[type="text"],
-[class^="form-sign"] input[type="password"] {
-  font-size: 16px;
-  height: auto;
-  margin-bottom: 15px;
-  padding: 7px 9px;
+input[type="submit"] [class^="icon-"].icon-large,
+input[type="submit"] [class*=" icon-"].icon-large {
+  line-height: .9em;
 }
+input[type="submit"] [class^="icon-"].icon-spin,
+input[type="submit"] [class*=" icon-"].icon-spin {
+  display: inline-block;
+}
+input[type="submit"] [class^="icon-"].pull-left.icon-2x,
+input[type="submit"] [class*=" icon-"].pull-left.icon-2x,
+input[type="submit"] [class^="icon-"].pull-right.icon-2x,
+input[type="submit"] [class*=" icon-"].pull-right.icon-2x {
+  margin-top: .18em;
+}
+input[type="submit"] [class^="icon-"].icon-spin.icon-large,
+input[type="submit"] [class*=" icon-"].icon-spin.icon-large {
+  line-height: .8em;
+}
+input[type="submit"]:hover,
+input[type="submit"]:focus,
+input[type="submit"]:active,
+input[type="submit"].active,
+input[type="submit"].disabled,
+input[type="submit"][disabled] {
+  color: #333333;
+  background-color: #e6e6e6;
+  *background-color: #d9d9d9;
+}
+input[type="submit"]:active,
+input[type="submit"].active {
+  background-color: #cccccc \9;
+}
+input[type="submit"]:hover,
+input[type="submit"]:focus,
+input[type="submit"]:active,
+input[type="submit"].active,
+input[type="submit"].disabled,
+input[type="submit"][disabled] {
+  color: #333333;
+  background-color: #e6e6e6;
+  *background-color: #d9d9d9;
+}
+input[type="submit"]:active,
+input[type="submit"].active {
+  background-color: #cccccc \9;
+}
+input[type="submit"]:first-child {
+  *margin-left: 0;
+}
+input[type="submit"]:first-child {
+  *margin-left: 0;
+}
+input[type="submit"]:hover,
+input[type="submit"]:focus {
+  color: #333333;
+  text-decoration: none;
+  background-position: 0 -15px;
+  -webkit-transition: background-position 0.1s linear;
+  -moz-transition: background-position 0.1s linear;
+  -o-transition: background-position 0.1s linear;
+  transition: background-position 0.1s linear;
+}
+input[type="submit"]:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+input[type="submit"].active,
+input[type="submit"]:active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+}
+input[type="submit"].disabled,
+input[type="submit"][disabled] {
+  cursor: default;
+  background-image: none;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+input[type="submit"] .label,
+input[type="submit"] .badge {
+  position: relative;
+  top: -1px;
+}
+.input-prepend .add-on {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  background-color: #fff;
+  border-right: 0;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
+}
+.input-prepend.input-block-level {
+  display: table;
+  width: 100%;
+}
+.input-prepend.input-block-level .add-on {
+  display: table-cell;
+}
+.input-prepend.input-block-level > input {
+  box-sizing: border-box;
+  height: 30px;
+  display: table-cell;
+  width: 100%;
+  border-left: 0;
+}
+/*
+ * /GLOBAL STYLES
+ */
+/*
+ * ENTRY LIST STYLES
+ */
 .entry-row td {
   font-size: 18px;
 }
@@ -8544,66 +8698,6 @@ body {
   padding: 4px 6px;
   font-size: 15px;
   font-weight: normal;
-}
-.entry-form-container-inline {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #ffffff;
-  border: 1px solid #ededed;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.entry-form-container-inline blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
-.entry-form-container-inline form[name="entry-form"] {
-  margin-bottom: 0px;
-  width: 100%;
-}
-.entry-form-container-inline form[name="entry-form"] input[type="text"] {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  border-left: 0;
-  border-right: 0;
-  -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
-  -moz-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
-}
-.entry-form-container-inline form[name="entry-form"] input[type="submit"] {
-  -webkit-border-radius: 0 14px 14px 0;
-  -moz-border-radius: 0 14px 14px 0;
-  border-radius: 0 14px 14px 0;
-  border-left: 0;
-}
-.entry-form-container-inline form[name="entry-form"] input:focus {
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-  box-shadow: inset 0 1px 0 rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-}
-.entry-form-container-inline form[name="entry-form"] .input-prepend .add-on {
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  background-color: #fff;
-  border-right: 0;
-}
-.entry-form-container-inline form[name="entry-form"] .input-prepend .add-on.add-on-round {
-  -webkit-border-radius: 14px 0 0 14px;
-  -moz-border-radius: 14px 0 0 14px;
-  border-radius: 14px 0 0 14px;
 }
 .side-panel {
   min-height: 20px;
@@ -8625,3 +8719,118 @@ body {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
 }
+form[name="entry-form"] {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ededed;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+form[name="entry-form"] blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
+/*
+ * /ENTRY LIST STYLES
+ */
+.center-form {
+  width: 300px;
+  margin: 0 auto;
+}
+/*
+ * PRESENTATION PAGE
+ */
+form[id="register-form"],
+form[id="signup-form"] {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ededed;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+form[id="register-form"] blockquote,
+form[id="signup-form"] blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
+form[id="register-form"] input[type="submit"],
+form[id="signup-form"] input[type="submit"] {
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+form[id="register-form"] input[type="submit"] {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #da4f49;
+  background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#bd362f));
+  background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f);
+  background-image: -o-linear-gradient(top, #ee5f5b, #bd362f);
+  background-image: linear-gradient(to bottom, #ee5f5b, #bd362f);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b', endColorstr='#ffbd362f', GradientType=0);
+  border-color: #bd362f #bd362f #802420;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #bd362f;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+form[id="register-form"] input[type="submit"]:hover,
+form[id="register-form"] input[type="submit"]:focus,
+form[id="register-form"] input[type="submit"]:active,
+form[id="register-form"] input[type="submit"].active,
+form[id="register-form"] input[type="submit"].disabled,
+form[id="register-form"] input[type="submit"][disabled] {
+  color: #ffffff;
+  background-color: #bd362f;
+  *background-color: #a9302a;
+}
+form[id="register-form"] input[type="submit"]:active,
+form[id="register-form"] input[type="submit"].active {
+  background-color: #942a25 \9;
+}
+form[id="register-form"] input[type="submit"]:hover,
+form[id="register-form"] input[type="submit"]:focus,
+form[id="register-form"] input[type="submit"]:active,
+form[id="register-form"] input[type="submit"].active,
+form[id="register-form"] input[type="submit"].disabled,
+form[id="register-form"] input[type="submit"][disabled] {
+  color: #ffffff;
+  background-color: #bd362f;
+  *background-color: #a9302a;
+}
+form[id="register-form"] input[type="submit"]:active,
+form[id="register-form"] input[type="submit"].active {
+  background-color: #942a25 \9;
+}
+form[id="register-form"] input[type="submit"] .caret {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+/*
+ * /PRESENTATION PAGE
+ */
