--- a/core/templates/access/forms/register.html
+++ b/core/templates/access/forms/register.html
@@ -1,29 +1,80 @@
-<form class="form-signup" method="POST" action="{% url "register" %}">{% csrf_token %}
+<form id="register-form" method="POST" action="{% url "register" %}">{% csrf_token %}
     <h2>Sign up</h2>
     
-    {% for field in register_form %}
-        <div class="control-group {% if field.errors %}error{% endif %}">
-            <div class="controls">
+    <div class="control-group {% if register_form.name.errors %}error{% endif %}">
+        <div class="controls">
+            <div class="input-prepend input-block-level">
+                <span class="add-on"><i class="icon-user"></i></span>
                 <input
-                    type="{{ field.field.widget.input_type }}"
-                    name="{{ field.name }}"
-                    class="input-block-level"
-                    placeholder="{{ field.label }}"
-                    {% if field.name not in empty_value_fields %}
-                        value="{{ field.value|default_if_none:"" }}"
-                    {% endif %}
+                    type="text"
+                    name="name"
+                    placeholder="Name"
+                    value="{{ register_form.name.value|default_if_none:"" }}"
                 >
             </div>
 
-            {% if field.errors %}
-            <ul>
-            {% for error in field.errors %}
-                <li><span class="help-block error">{{ error }}</span></li>
+            {% for error in register_form.name.errors %}
+                <span class="help-block error">{{ error }}</span>
             {% endfor %}
-            </ul>
-            {% endif %}
         </div>
-    {% endfor %}
 
-    <button class="btn btn-danger" type="submit">Create account</button>
+    </div>
+
+    <div class="control-group {% if register_form.email.errors %}error{% endif %}">
+        <div class="controls">
+            <div class="input-prepend input-block-level">
+                <span class="add-on"><i class="icon-envelope"></i></span>
+                <input
+                    type="text"
+                    name="email"
+                    placeholder="Email"
+                    value="{{ register_form.email.value|default_if_none:"" }}"
+                >
+            </div>
+
+            {% for error in register_form.email.errors %}
+                <span class="help-block error">{{ error }}</span>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="control-group {% if register_form.password1.errors %}error{% endif %}">
+        <div class="controls">
+            <div class="input-prepend input-block-level">
+                <span class="add-on"><i class="icon-asterisk"></i></span>
+                <input
+                    type="password"
+                    name="password1"
+                    placeholder="Password"
+                >
+            </div>
+
+            {% for error in register_form.password1.errors %}
+                <span class="help-block error">{{ error }}</span>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="control-group {% if register_form.password2.errors %}error{% endif %}">
+        <div class="controls">
+            <div class="input-prepend input-block-level">
+                <span class="add-on"><i class="icon-asterisk"></i></span>
+                <input
+                    type="password"
+                    name="password2"
+                    placeholder="Confirm password"
+                >
+            </div>
+
+            {% for error in register_form.password2.errors %}
+                <span class="help-block error">{{ error }}</span>
+            {% endfor %}
+        </div>
+    </div>
+
+    <input type="submit" value="Sign up">
+
+    <hr>
+
+    <p>Already a user? <a href="{% url "login" %}">Sign in</a></p>
 </form>
