--- a/core/templates/access/register.html
+++ b/core/templates/access/register.html
@@ -3,8 +3,7 @@
 
 {% block body %}
 
-<div class="container">
+<div class="container center-form">
     {% include "access/forms/register.html" %}
-    <p>Already a user? <a href="{% url "login" %}">Sign in</a></p>
 </div>
 {% endblock body %}
