--- a/core/templates/expenses/forms/entry.html
+++ b/core/templates/expenses/forms/entry.html
@@ -1,10 +1,8 @@
-<form class="form-inline" name="entry-form" action="{% url "new_entry" %}" method="post">{% csrf_token %}
+<form class="form" name="entry-form" action="{% url "new_entry" %}" method="post">{% csrf_token %}
     {{entry_form.errors}}
 
-    <input id="id_id" name="id" type="hidden" />
-
-    <div class="input-prepend">
-        <span class="add-on add-on-round"><i class="icon-tag"></i></span>
+    <div class="input-prepend input-block-level">
+        <span class="add-on"><i class="icon-tag"></i></span>
         <input
             id="id_category"
             maxlength="200"
@@ -17,10 +15,9 @@
             autofocus/>
     </div>
 
-    <div class="input-prepend" id="value-input">
+    <div class="input-prepend input-block-level" id="value-input">
         <span class="add-on">$</span>
         <input
-            class="input-mini"
             id="id_value"
             name="value"
             type="text"
@@ -30,11 +27,11 @@
             />
     </div>
 
-    <div class="input-prepend">
+    <div class="input-prepend input-block-level">
         <span class="add-on"><i class="icon-calendar"></i></span>
         <input
             id="id_date"
-            class="datepicker input-small"
+            class="datepicker"
             name="date"
             type="text"
             autocomplete="off"
@@ -47,7 +44,7 @@
             />
     </div>
 
-    <div class="input-prepend">
+    <div class="input-prepend input-block-level">
         <span class="add-on"><i class="icon-pencil"></i></span>
         <input
             id="id_description"
@@ -59,5 +56,5 @@
             value="{{ entry_form.description.value|default_if_none:"" }}"/>
     </div>
 
-    <input type="submit" value="Submit" class="btn" />
+    <input type="submit" value="Submit" class="btn btn-block" />
 </form>
