--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,7 +19,7 @@
         {% block extrahead %}{% endblock extrahead %}
     </head>
     <body>
-        <div class="navbar navbar-fixed-top">
+        <div class="navbar navbar-static-top">
             <div class="navbar-inner">
                 <div class="container container-fluid">
                     <a class="brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
