fixing login form

--- a/core/templates/access/forms/login.html
+++ b/core/templates/access/forms/login.html
@@ -24,7 +24,7 @@
                 <span class="add-on"><i class="icon-envelope"></i></span>
                 <input
                     type="text"
-                    name="email"
+                    name="username"
                     placeholder="Email"
                     value="{{ form.username.value|default_if_none:"" }}"
                 >
