--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -26,6 +26,7 @@
 .squared-well {
     .well();
     .border-radius(0);
+    .box-shadow(0);
 }
 
 input {
@@ -76,7 +77,6 @@ input {
 
 .navbar {
     margin-bottom: 20px;
-    .box-shadow(0) !important;
 }
 
 /*
