better layout for the forgot password templates

--- a/core/templates/password_reset/base.html
+++ b/core/templates/password_reset/base.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
+{% extends "access/login.html" %}
 
 {% block body %}
+    <div class="container center-form">
     {% block content %}
     {% endblock content %}
+</div> <!-- container -->
 {% endblock body %}
