--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -8686,6 +8686,27 @@ input[type="submit"] .badge {
 .center-form {
   width: 300px;
   margin: 0 auto;
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ededed;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0;
+  -moz-box-shadow: 0;
+  box-shadow: 0;
+}
+.center-form blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
 }
 .navbar {
   margin-bottom: 20px;
@@ -8950,8 +8971,7 @@ form[name="entry-form"] input[type="submit"] .badge {
 /*
  * PRESENTATION PAGE
  */
-form[id="register-form"],
-form[id="signup-form"] {
+[id="signup-area"] {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
@@ -8970,13 +8990,12 @@ form[id="signup-form"] {
   -moz-box-shadow: 0;
   box-shadow: 0;
 }
-form[id="register-form"] blockquote,
-form[id="signup-form"] blockquote {
+[id="signup-area"] blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
 }
 form[id="register-form"] input[type="submit"],
-form[id="signup-form"] input[type="submit"] {
+form[id="signin-form"] input[type="submit"] {
   display: block;
   width: 100%;
   padding-left: 0;
