--- a/core/templates/password_reset/base.html
+++ b/core/templates/password_reset/base.html
@@ -1,8 +1,8 @@
-{% extends "access/login.html" %}
+{% extends "base.html" %}
 
 {% block body %}
     <div class="container center-form">
     {% block content %}
     {% endblock content %}
-</div> <!-- container -->
+    </div> <!-- container -->
 {% endblock body %}
