--- a/core/templates/presentation.html
+++ b/core/templates/presentation.html
@@ -10,7 +10,9 @@
             </div>
         </div>
         <div class="span3">
+            <div id="signup-area">
             {% include "access/forms/register.html" %}
+            </div>
         </div>
     </div>
 </div> <!-- container -->
