--- a/core/static/less/styles.less
+++ b/core/static/less/styles.less
@@ -8,6 +8,10 @@
 @heroUnitBackground: #fff;
 @wellBackground: #fff;
 
+body {
+    background-image: url(/static/img/textured_paper.png);
+}
+
 .hero-unit {
     border: 1px solid darken(@heroUnitBackground, 7%);
     .border-radius(0);
