--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -25,7 +25,7 @@
                     <a class="brand" href="{% url "index" %}">{{ SITE_NAME }}</a>
                     {% if user.is_authenticated %}
                         <p class="navbar-text pull-right">
-                            Olá, {{ user.name }} ({{ user.email }}) (<a href="{% url "change_password" %}" class="navbar-link">Change password</a>) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
+                            Olá, {{ user.name|capfirst }} ({{ user.email }}) (<a href="{% url "change_password" %}" class="navbar-link">Change password</a>) (<a href="{% url "logout" %}" class="navbar-link">Logout</a>)
                         {% if user.is_admin %}
                            (<a href="{% url "admin:index" %}" class="navbar-link">Painel de admininstração</a>)
                         {% endif %}
