--- a/core/templates/access/change_password.html
+++ b/core/templates/access/change_password.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block body %}
     
 <div class="container center-form">
     <form action="{% url "change_password" %}" method="POST">{% csrf_token %}
         {{ form }}
-        <input type="submit" value="Reset password">
+        <input type="submit" value="{% trans "Reset password" %}" >
     </form>
 </div> <!-- container -->
 
