--- a/core/templates/access/forms/login.html
+++ b/core/templates/access/forms/login.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <form id="signin-form" method="POST" action="{% url "login" %}">{% csrf_token %}
 
     {% if messages %}
@@ -9,7 +11,7 @@
         {% endfor %}
     {% endif %}
 
-    <h2>Please sign in</h2>
+    <h2>{% trans "Please sign in" %}</h2>
 
     {% for error in form.non_field_errors %}
         <div class="alert alert-error">
@@ -25,7 +27,7 @@
                 <input
                     type="text"
                     name="username"
-                    placeholder="Email"
+                    placeholder="{% trans "Email" %}"
                     value="{{ form.username.value|default_if_none:"" }}"
                 >
             </div>
@@ -43,7 +45,7 @@
                 <input
                     type="password"
                     name="password"
-                    placeholder="Password"
+                    placeholder="{% trans "Password" %}"
                 >
             </div>
 
@@ -53,10 +55,10 @@
         </div>
     </div>
 
-    <input type="submit" value="Login">
+    <input type="submit" value="{% trans "Login" %}">
 
     <hr>
 
-    <p><a href="{% url "password_reset_recover" %}">Forgot your password?</a></p>
-    <p>Not a user yet? <a href="{% url "register" %}">Sign up here!</a></p>
+    <p><a href="{% url "password_reset_recover" %}">{% trans "Forgot your password?" %}</a></p>
+    <p>{% trans "Not a user yet?" %} <a href="{% url "register" %}">{% trans "Sign up here!" %}</a></p>
 </form>
