--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
         <script type="text/javascript">
             user_categories = {{ user_categories|to_json }};
+            short_date_format = "{{ js_date_format }}";
         </script>
 
         {% block extrahead %}{% endblock extrahead %}
@@ -42,6 +43,7 @@
         <script src="{% static "js/jquery.js" %}"></script>
         <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
+        <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
 
         <script type="text/javascript">
             $(function(){
