--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -10,7 +10,7 @@
 @wellBackground: #fff;
 
 body {
-    background-image: url(/static/img/textured_paper.png);
+    background-image: url(../img/textured_paper.png);
 }
 
 .hero-unit {
