--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
         <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
         <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
+        <script src="{% url "django.views.i18n.javascript_catalog" %}" type="text/javascript"></script>
 
         <script type="text/javascript">
             $(function(){
