changing the value and percent formatting

--- a/templates/expenses/list.html
+++ b/templates/expenses/list.html
@@ -47,7 +47,7 @@
                             <td class="span1" text-align="center">{{ entry.date|date:"d" }}</td>
                             <td class="span2">{{ entry.category|as_category }}</td>
                             <td> {{ entry.description|truncatechars:30}}</td>
-                            <td class="span2"><strong>{{ entry.value|as_value:currency_symbol }}</strong></td>
+                            <td class="span2">{{ entry.value|as_value:currency_symbol }}</td>
 
                             <td class="span1 action-bar">
                                 <i class="icon-trash delete-entry"></i>
