--- a/templates/expenses/month_balance_panel.html
+++ b/templates/expenses/month_balance_panel.html
@@ -2,6 +2,7 @@
 {% load expenses_tags %}
 
 <div class="side-panel">
+    <i id="balance-help" class="icon-question-sign close"></i>
     <h4>{% trans "Monthly balance:" %}</h4>
     <p>{{ average_balance.base|as_value:currency_symbol }}&nbsp;{{ average_balance.deviation|as_deviation }}</p>
 </div>
